Commented and cleaned up app.js file

--- a/Belly_Button_Biodiversity/index.html
+++ b/Belly_Button_Biodiversity/index.html
@@ -24,7 +24,7 @@
       <br>
       <div class="col-md-3">
         <div class="well">
-          <h5><strong>Test Subject ID:</strong>
+          <h5>Test Subject ID:
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="panel panel-primary">
